Fix: menubar and loader z-index issue

--- a/src/app/loading.css
+++ b/src/app/loading.css
@@ -26,33 +26,33 @@
   
   .loader .box:nth-child(1) {
     inset: 40%;
-    z-index: 99;
+    z-index: 49;
   }
   
   .loader .box:nth-child(2) {
     inset: 30%;
-    z-index: 98;
+    z-index: 48;
     border-color: rgba(100, 100, 100, 0.8);
     animation-delay: 0.2s;
   }
   
   .loader .box:nth-child(3) {
     inset: 20%;
-    z-index: 97;
+    z-index: 47;
     border-color: rgba(100, 100, 100, 0.6);
     animation-delay: 0.4s;
   }
   
   .loader .box:nth-child(4) {
     inset: 10%;
-    z-index: 96;
+    z-index: 46;
     border-color: rgba(100, 100, 100, 0.4);
     animation-delay: 0.6s;
   }
   
   .loader .box:nth-child(5) {
     inset: 0%;
-    z-index: 95;
+    z-index: 45;
     border-color: rgba(100, 100, 100, 0.2);
     animation-delay: 0.8s;
   }
